--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -23,6 +23,7 @@
 %%
 %% The first command in your LaTeX source must be the \documentclass command.
 \documentclass[sigplan,screen]{acmart}
+\usepackage{subcaption}
 \usepackage{todonotes}
 \usepackage{xcolor}
 \usepackage{amsmath}
