add more on related work for CGRAs
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -584,3 +584,39 @@ pages="394--408",
 abstract="Enumerative approaches, such as branch-and-bound, to solv- ing optimization problems require a subroutine that produces a lower bound on the value of the optimal solution. In the domain of scheduling problems the requisite lower bound has typically been derived from either the solution to a linear-programming relaxation of the problem or the solution of a combinatorial relaxation. In this paper we investigate, from both a theoretical and practical perspective, the relationship between several linear-programming based lower bounds and combinatorial lower bounds for two scheduling problems in which the goal is to minimize the average weighted completion time of the jobs scheduled.",
 isbn="978-3-540-69346-8"
 }
+
+%% RL chip
+
+
+@article{khailany_accelerating_2020,
+	title = {Accelerating {Chip} {Design} {With} {Machine} {Learning}},
+	volume = {40},
+	issn = {1937-4143},
+	doi = {10.1109/MM.2020.3026231},
+	abstract = {Recent advancements in machine learning provide an opportunity to transform chip design workflows. We review recent research applying techniques such as deep convolutional neural networks and graph-based neural networks in the areas of automatic design space exploration, power analysis, VLSI physical design, and analog design. We also present a future vision of an AI-assisted automated chip design workflow to aid designer productivity and automate optimization tasks.},
+	number = {6},
+	journal = {IEEE Micro},
+	author = {Khailany, Brucek and Ren, Haoxing and Dai, Steve and Godil, Saad and Keller, Ben and Kirby, Robert and Klinefelter, Alicia and Venkatesan, Rangharajan and Zhang, Yanqing and Catanzaro, Bryan and Dally, William J.},
+	month = nov,
+	year = {2020},
+	pages = {23--32},
+	file = {Khailany et al. - 2020 - Accelerating Chip Design With Machine Learning.pdf:C\:\\Users\\basharromano\\Zotero\\storage\\EGTQHFBL\\Khailany et al. - 2020 - Accelerating Chip Design With Machine Learning.pdf:application/pdf},
+}
+
+@article{wu_core_2020,
+	title = {Core {Placement} {Optimization} for {Multi}-{Chip} {Many}-{Core} {Neural} {Network} {Systems} with {Reinforcement} {Learning}},
+	volume = {26},
+	issn = {1084-4309},
+	url = {https://doi.org/10.1145/3418498},
+	doi = {10.1145/3418498},
+	abstract = {Multi-chip many-core neural network systems are capable of providing high parallelism benefited from decentralized execution, and they can be scaled to very large systems with reasonable fabrication costs. As multi-chip many-core systems scale up, communication latency related effects will take a more important portion in the system performance. While previous work mainly focuses on the core placement within a single chip, there are two principal issues still unresolved: the communication-related problems caused by the non-uniform, hierarchical on/off-chip communication capability in multi-chip systems, and the scalability of these heuristic-based approaches in a factorially growing search space. To this end, we propose a reinforcement-learning-based method to automatically optimize core placement through deep deterministic policy gradient, taking into account information of the environment by performing a series of trials (i.e., placements) and using convolutional neural networks to extract spatial features of different placements. Experimental results indicate that compared with a naive sequential placement, the proposed method achieves 1.99× increase in throughput and 50.5\% reduction in latency; compared with the simulated annealing, an effective technique to approximate the global optima in an extremely large search space, our method improves the throughput by 1.22× and reduces the latency by 18.6\%. We further demonstrate that our proposed method is capable to find optimal placements taking advantages of different communication properties caused by different system configurations, and work in a topology-agnostic manner.},
+	number = {2},
+	journal = {ACM Trans. Des. Autom. Electron. Syst.},
+	author = {Wu, Nan and Deng, Lei and Li, Guoqi and Xie, Yuan},
+	month = oct,
+	year = {2020},
+	note = {Place: New York, NY, USA
+Publisher: Association for Computing Machinery},
+	keywords = {core placement optimization, machine learning for system, Multi-chip many-core architecture, neural network accelerator},
+	file = {Wu et al. - 2020 - Core Placement Optimization for Multi-Chip Many-Co.pdf:C\:\\Users\\basharromano\\Zotero\\storage\\HEUUNYXR\\Wu et al. - 2020 - Core Placement Optimization for Multi-Chip Many-Co.pdf:application/pdf},
+}
