--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -278,9 +278,9 @@
 %% (and NOT an unnumbered section). This ensures the proper
 %% identification of the section in the article metadata, and the
 %% consistent spelling of the heading.
-\begin{acks}
-Placeholder.
-\end{acks}
+% \begin{acks}
+
+% \end{acks}
 
 %%
 %% The next two lines define the bibliography style to be used, and
