corrected misnamed figure and fixed a redundant reference
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sections/Related_work.tex
+++ b/doc/sections/Related_work.tex
@@ -1,7 +1,7 @@
 \subsection{CGRA}
 CGRAs are a heavily researched architectural paradigm with a long history and can provide an excellent balance of high-performance compute, memory bandwidth, and area and energy efficiency \cite{theodoridis2007survey}.
 Due to such advantages, CGRAs are currently enjoying a resurgence in interest—not just in the research realm \cite{prabhakar2018plasticine}, but also commercially \cite{morgan2018intel, nicol2017coarse, vissers2019versal}.
-Research compilers targeting CGRAs are available (for example, \cite{adriaansen2016code, chin2017cgra, mei2003exploiting, prabhakar2018plasticine}) but they are limited in quality and code coverage. 
+Research compilers targeting CGRAs are available (for example, \cite{adriaansen2016code, chin_cgra-me_2017, mei2003exploiting, prabhakar2018plasticine}) but they are limited in quality and code coverage. 
 Industry-strength compilers such as Clang/LLVM do not provide official support for CGRA-like architectures.
 For further information on the various taxonomy of CGRAs architectures and design, we refer the reader to \cite{liu_survey_2019, tehre_survey_2012}.
 
