--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -223,10 +223,38 @@
 }
 
 @article{mirhoseini2020chip,
-  title={Chip placement with deep reinforcement learning},
-  author={Mirhoseini, Azalia and Goldie, Anna and Yazgan, Mustafa and Jiang, Joe and Songhori, Ebrahim and Wang, Shen and Lee, Young-Joon and Johnson, Eric and Pathak, Omkar and Bae, Sungmin and others},
-  journal={arXiv preprint arXiv:2004.10746},
-  year={2020}
+  author    = {Azalia Mirhoseini and
+               Anna Goldie and
+               Mustafa Yazgan and
+               Joe Jiang and
+               Ebrahim M. Songhori and
+               Shen Wang and
+               Young{-}Joon Lee and
+               Eric Johnson and
+               Omkar Pathak and
+               Sungmin Bae and
+               Azade Nazi and
+               Jiwoo Pak and
+               Andy Tong and
+               Kavya Srinivasa and
+               William Hang and
+               Emre Tuncer and
+               Anand Babu and
+               Quoc V. Le and
+               James Laudon and
+               Richard C. Ho and
+               Roger Carpenter and
+               Jeff Dean},
+  title     = {Chip Placement with Deep Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/2004.10746},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2004.10746},
+  eprinttype = {arXiv},
+  eprint    = {2004.10746},
+  timestamp = {Tue, 28 Apr 2020 16:10:02 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2004-10746.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{zhou2019gdp,
@@ -419,15 +447,6 @@
   booktitle={2016 Euromicro Conference on Digital System Design (DSD)},
   pages={30--37},
   year={2016},
-  organization={IEEE}
-}
-
-@inproceedings{chin2017cgra,
-  title={CGRA-ME: A unified framework for CGRA modelling and exploration},
-  author={Chin, S Alexander and Sakamoto, Noriaki and Rui, Allan and Zhao, Jim and Kim, Jin Hee and Hara-Azumi, Yuko and Anderson, Jason},
-  booktitle={2017 IEEE 28th international conference on application-specific systems, architectures and processors (ASAP)},
-  pages={184--189},
-  year={2017},
   organization={IEEE}
 }
 
